--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <tr>
             <td>2</td>
             <td>Fenrir</td>
-            <td>A giant wolf that is the on of Loki and is some myth, will devour the sun.</td>
+            <td>A giant wolf that is the son of Loki and is some myth, will devour the sun.</td>
             <td><img src="myth/fenrir.jpg" width="100" height="100"></td>
         </tr>
                 <tr>
